Fix dark mode
Fixes #43.

--- a/snikket_web/scss/app.scss
+++ b/snikket_web/scss/app.scss
@@ -1046,6 +1046,12 @@ pre.guru-meditation {
 		}
 	}
 
+	body#login {
+		.form-title {
+			color: $primary-800;
+		}
+	}
+
 	body > footer {
 		background-color: $gray-200;
 		color: $gray-800;
